<resources>
    <string name="app_name">Chillrate</string>

    <string name="search">Search</string>
    <string name="menu_fragment_label">Menu</string>
    <string name="electrodes">Electrodes</string>
    <string name="envelope">Envelope</string>
    <string name="signal">Signal</string>
    <string name="info">Info</string>
    <string name="emotions">Emotions</string>
    <string name="spectrum">Spectrum</string>
    <string name="ecg">ECG</string>

    <string name="start_search">Start search</string>

    <string name="start">Start</string>
    <string name="stop">Stop</string>

    <string name="disconnect">Disconnect</string>
    <string name="connect">Connect</string>

    <string name="electrodes_state">Electrodes state:</string>

    <string name="dev_state_title">State:</string>
    <string name="dev_power_title">Power:</string>

    <string name="dev_state_connected">Connected</string>
    <string name="dev_state_disconnected">Disconnected</string>
    <string name="dev_power_empty"></string>
    <string name="dev_power_prc">%1$d %%</string>

    <string name="alpha">Alpha:</string>
    <string name="beta">Beta:</string>
    <string name="theta">Theta:</string>
    <string name="delta">Delta:</string>
    <string name="gamma">Gamma:</string>
    <string name="choose_signal_type">Choose signal type:</string>
    <string name="hr">HR:</string>
    <string name="rr">RR:</string>
    <string name="pressure_index">Pressure index:</string>
    <string name="moda">Moda:</string>
    <string name="ampmoda">AmpModa:</string>
    <string name="variation_dist">Variation dist:</string>
    <string name="calibrate">Calibrate</string>
    <string name="artifacted">Artifacted</string>
    <string name="not_artifacted">Not Artifacted</string>
    <string name="no_data_available">Нет доступных данных</string>
    <string name="relaxation_label">Расслабление:</string>
    <string name="attention_label">Внимание:</string>
    <string name="alpha_label">Альфа:</string>
    <string name="beta_label">Бета:</string>
    <string name="gamma_label">Гамма:</string>
    <string name="theta_label">Тета:</string>
    <string name="delta_label">Дельта:</string>
    <string name="navigation_drawer_open">Открыть меню</string>
    <string name="navigation_drawer_close">Закрыть меню</string>
</resources>