<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.neurotech.callibrineurosdkdemo.screens.menu.MenuViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.menu.MenuFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_search"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="wrap_content"
                    android:text="@string/search" />

                <Button
                    android:id="@+id/button_signal"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="wrap_content"
                    android:enabled="@{viewModel.connected}"
                    android:text="@string/signal" />

                <Button
                    android:id="@+id/button_info"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="wrap_content"
                    android:enabled="@{viewModel.connected}"
                    android:text="@string/info" />

                <Button
                    android:id="@+id/button_envelope"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="wrap_content"
                    android:enabled="@{viewModel.connected}"
                    android:text="@string/envelope" />


                <Button
                    android:id="@+id/button_emotions"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="wrap_content"
                    android:enabled="@{viewModel.connected}"
                    android:text="@string/emotions" />

                <Button
                    android:id="@+id/button_spectrum"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="wrap_content"
                    android:enabled="@{viewModel.connected}"
                    android:text="@string/spectrum" />

                <Button
                    android:id="@+id/button_ecg"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="wrap_content"
                    android:enabled="@{viewModel.connected}"
                    android:text="@string/ecg" />

                <Button
                    android:id="@+id/button_current_reconect"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="wrap_content"
                    android:enabled="@{viewModel.hasDevice}"
                    android:text="@{viewModel.connected ? @string/disconnect : @string/connect}" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>