<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.neurotech.callibrineurosdkdemo.screens.spectrum.SpectrumViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.spectrum.SpectrumFragment">

    <Button
        android:id="@+id/start_spectrum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@{viewModel.started ? @string/stop : @string/start}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.androidplot.xy.XYPlot
        android:id="@+id/plotSpectrum"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:graphAnchor="left_top"
        app:graphHeight="0dp"
        app:graphHeightMode="fill"

        app:graphHorizontalPosition="0dp"
        app:graphHorizontalPositioning="absolute_from_left"
        app:graphVerticalPosition="0dp"
        app:graphVerticalPositioning="relative_from_top"
        app:graphWidth="0dp"

        app:graphWidthMode="fill"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_spectrum" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:stretchColumns="*"
        android:shrinkColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/alpha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alpha"/>
            <TextView
                android:id="@+id/alphaValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(viewModel.alpha) + '%'}"/>
            <TextView
                android:id="@+id/beta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beta"/>
            <TextView
                android:id="@+id/betaValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(viewModel.beta) + '%'}"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                android:id="@+id/theta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theta"/>
            <TextView
                android:id="@+id/thetaValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(viewModel.theta) + '%'}"/>
            <TextView
                android:id="@+id/delta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delta"/>
            <TextView
                android:id="@+id/deltaValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(viewModel.delta) + '%'}"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/gamma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gamma"/>
            <TextView
                android:id="@+id/gammaValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(viewModel.gamma) + '%'}"/>
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>