<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.neurotech.callibrineurosdkdemo.screens.ecg.ECGViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.ecg.ECGFragment" >

        <Button
            android:id="@+id/ecg_start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.started ? @string/stop : @string/start}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TableLayout
            android:id="@+id/ecg_data_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="*"
            android:stretchColumns="*"
            app:layout_constraintTop_toBottomOf="@+id/ecg_start_button">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView_hr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hr" />

                <TextView
                    android:id="@+id/textView_hr_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(viewModel.ecgData.hr)}" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView_rr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rr" />

                <TextView
                    android:id="@+id/textView_rr_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(viewModel.ecgData.rr)}" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView_pi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure_index" />

                <TextView
                    android:id="@+id/textView_pi_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(viewModel.ecgData.pi)}" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView_moda"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moda" />

                <TextView
                    android:id="@+id/textView_moda_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(viewModel.ecgData.moda)}" />

                <TextView
                    android:id="@+id/textView_ampmoda"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ampmoda" />

                <TextView
                    android:id="@+id/textView_ampmoda_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(viewModel.ecgData.ampModa)}" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView_var_dist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/variation_dist" />

                <TextView
                    android:id="@+id/textView_var_dist_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(viewModel.ecgData.variationDist)}" />
            </TableRow>

        </TableLayout>

        <com.androidplot.xy.XYPlot
            android:id="@+id/plot_signal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"

            android:layout_marginBottom="5dp"
            app:graphAnchor="left_top"
            app:graphHeight="0dp"
            app:graphHeightMode="fill"
            app:graphHorizontalPosition="0dp"

            app:graphHorizontalPositioning="absolute_from_left"
            app:graphVerticalPosition="0dp"
            app:graphVerticalPositioning="relative_from_top"
            app:graphWidth="0dp"
            app:graphWidthMode="fill"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ecg_data_table" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
